include/gemini3d.h

struct params {
  // order and lengths must match in Fortran and C
  // see gemini_main.f90 "cparams"
  bool fortran_nml;
  bool fortran_cli;
  bool debug;
  bool dryrun;
  char out_dir[LMAX];
  // .ini [base]
  int ymd[3];
  float UTsec0;
  float tdur;
  float dtout;
  float activ[3];
  float tcfl;
  float Teinf;
  // .ini
};
/* interfaces to libgemini */
extern void gemini_cfg_alloc_C(void**);
extern void gemini_cfg_dealloc_C(void**);
extern void cli_in_C(struct params*, int*, int*, void**);
extern void read_config_in_C(struct params*, void**);
extern void grid_size_in_C(void**);
extern void get_fullgrid_size_C(int*, int*, int*);
extern void get_config_vars_C(void**, bool*, int*, double*, double*);
extern void get_subgrid_size_C(int*, int*, int*);
extern void get_species_size_C(int*);
extern void get_fullgrid_lims_C(double*, double*, double*, double*, double*, double*);
extern void gemini_work_alloc_C(void**,void**);
extern void gemini_work_dealloc_C(void**, void**);
extern void plasma_output_nompi_C(void**, int*, double*, double**, double**, int*, double*, double*, double*);
extern void read_fullsize_gridcenter_C(void**);
extern void gemini_grid_dealloc_C(int*,void**);
extern void gemini_grid_generate_C(int*, void**);
extern void gemini_grid_generate_altnull_C(int*, void**, double*);